Update .gitignore to ignore some more xcode user files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build
+DerivedData
  
 *.pbxuser
 *.perspectivev3
@@ -11,5 +12,9 @@ build
  
 *~.nib
 *~.xib
-
+ 
+.*.sw?
 .DS_Store
+
+
+xcuserdata
